// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Membership Fee Invoice Payload Tests with 50% membership fee seasonal discount (on or after October 1) applies 50% discount to membership fee for a FLYING member 1`] = `
{
  "Invoice": {
    "client_id": 123456,
    "overdue_charge_percent": 0,
  },
  "Tasks": [
    {
      "Projects": [
        {
          "code": "Varainhankinta",
        },
      ],
      "Task": {
        "amount": 1,
        "article_id": 1,
        "price_per_unit": 120,
      },
    },
    {
      "Projects": [
        {
          "code": "Varainhankinta",
        },
      ],
      "Task": {
        "amount": 1,
        "article_id": 1,
        "discount": 50,
        "price_per_unit": 120,
      },
    },
  ],
}
`;

exports[`Membership Fee Invoice Payload Tests without seasonal discount (before October 1) creates an invoice template for a FLYING member 1`] = `
{
  "Invoice": {
    "client_id": 123456,
    "overdue_charge_percent": 0,
  },
  "Tasks": [
    {
      "Projects": [
        {
          "code": "Varainhankinta",
        },
      ],
      "Task": {
        "amount": 1,
        "article_id": 1,
        "price_per_unit": 120,
      },
    },
    {
      "Projects": [
        {
          "code": "Varainhankinta",
        },
      ],
      "Task": {
        "amount": 1,
        "article_id": 1,
        "price_per_unit": 120,
      },
    },
  ],
}
`;

exports[`Membership Fee Invoice Payload Tests without seasonal discount (before October 1) creates an invoice template for a JUNIOR member 1`] = `
{
  "Invoice": {
    "client_id": 123456,
    "overdue_charge_percent": 0,
  },
  "Tasks": [
    {
      "Projects": [
        {
          "code": "Varainhankinta",
        },
      ],
      "Task": {
        "amount": 1,
        "article_id": 2,
        "price_per_unit": 50,
      },
    },
    {
      "Projects": [
        {
          "code": "Varainhankinta",
        },
      ],
      "Task": {
        "amount": 1,
        "article_id": 2,
        "price_per_unit": 50,
      },
    },
  ],
}
`;

exports[`Membership Fee Invoice Payload Tests without seasonal discount (before October 1) creates an invoice template for a supporting member 1`] = `
{
  "Invoice": {
    "client_id": 123456,
    "overdue_charge_percent": 0,
  },
  "Tasks": [
    {
      "Projects": [
        {
          "code": "Varainhankinta",
        },
      ],
      "Task": {
        "amount": 1,
        "article_id": 3,
        "price_per_unit": 80,
      },
    },
    {
      "Projects": [
        {
          "code": "Varainhankinta",
        },
      ],
      "Task": {
        "amount": 1,
        "article_id": 3,
        "price_per_unit": 80,
      },
    },
  ],
}
`;

exports[`Membership Fee Invoice Payload Tests without seasonal discount (before October 1) creates an invoice template for an HONORARY member with 100% discount and note 1`] = `
{
  "Invoice": {
    "additional_info": "Honorary member — fees fully discounted",
    "client_id": 123456,
    "overdue_charge_percent": 0,
  },
  "Tasks": [
    {
      "Projects": [
        {
          "code": "Varainhankinta",
        },
      ],
      "Task": {
        "amount": 1,
        "article_id": 1,
        "discount": 100,
        "price_per_unit": 120,
      },
    },
    {
      "Projects": [
        {
          "code": "Varainhankinta",
        },
      ],
      "Task": {
        "amount": 1,
        "article_id": 1,
        "discount": 100,
        "price_per_unit": 120,
      },
    },
  ],
}
`;
